--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -205,6 +205,24 @@
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
                 app:layout_constraintTop_toTopOf="@id/activity_join_step2_img_email_warning" />
 
+            <TextView
+                android:id="@+id/activity_join_step2_tv_exist_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="올바른 이메일 형식이 아니에요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_email_warning"
+                app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
+                app:layout_constraintTop_toTopOf="@id/activity_join_step2_img_email_warning" />
+
+
             <ImageView
                 android:id="@+id/activity_join_step2_btn_email_erase"
                 android:layout_width="wrap_content"
