[Implement Features] 이메일, 닉네임 중복 체크 서버 연결

--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -214,7 +214,7 @@
                 android:includeFontPadding="false"
                 android:letterSpacing="-0.04"
                 android:lineSpacingExtra="1sp"
-                android:text="올바른 이메일 형식이 아니에요!"
+                android:text="이미 가입된 이메일이에요!"
                 android:textColor="@color/reddish"
                 android:textSize="14sp"
                 android:visibility="gone"
