--- a/app/src/main/res/layout/item_writing_theme_img.xml
+++ b/app/src/main/res/layout/item_writing_theme_img.xml
@@ -35,6 +35,7 @@
         android:id="@+id/item_writing_theme_tv_imgIdx"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
