[Implement Features] ViewPager 연결

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="very_light_pink_three">#dbdbdb</color>
     <color name="very_light_pink_four">#dedede</color>
     <color name="very_light_pink_five">#e6e6e6</color>
+    <color name="very_light_pink_six">#efefef</color>
     <color name="white">#ffffff</color>
     <color name="white_0">#00ffffff</color>
     <color name="white_two">#f8f8f8</color>
