--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_join_step3_cl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.JoinStep3Activity">
@@ -95,19 +96,22 @@
         app:layout_constraintTop_toTopOf="@+id/activity_join_step3_3_pgb_out" />
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/activity_join_step3_sv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="10dp"
         android:fillViewport="true"
         android:overScrollMode="never"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toTopOf="@+id/activity_join_step3_btn_popup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_pgb">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_join_step3_cl_in"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -115,15 +119,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_pgb">
 
+            <View
+                android:id="@+id/view_empty1"
+                android:layout_width="0dp"
+                android:layout_height="77dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="75dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view_empty1"
                 app:srcCompat="@drawable/join_step_3_img_mail" />
+
+            <View
+                android:id="@+id/view_empty2"
+                android:layout_width="0dp"
+                android:layout_height="72dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
             <TextView
                 android:id="@+id/textView23"
@@ -140,14 +159,23 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                app:layout_constraintTop_toBottomOf="@+id/view_empty2" />
+
+            <View
+                android:id="@+id/view_empty3"
+                android:layout_width="0dp"
+                android:layout_height="7dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
             <TextView
                 android:id="@+id/textView26"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="54dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="58dp"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
@@ -158,7 +186,15 @@
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView23" />
+                app:layout_constraintTop_toBottomOf="@+id/view_empty3" />
+
+            <View
+                android:id="@+id/view_empty4"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
             <TextView
                 android:id="@+id/activity_join_step3_tv_timer"
@@ -174,7 +210,16 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/textView26"
                 app:layout_constraintStart_toStartOf="@+id/textView26"
-                app:layout_constraintTop_toBottomOf="@+id/textView26" />
+                app:layout_constraintTop_toBottomOf="@+id/view_empty4" />
+
+            <View
+                android:id="@+id/view_empty5"
+                android:layout_width="0dp"
+                android:layout_height="6dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_tv_timer" />
 
             <EditText
                 android:id="@+id/activity_join_step3_et_code1"
@@ -196,10 +241,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_tv_timer">
-
-                <requestFocus />
-            </EditText>
+                app:layout_constraintTop_toBottomOf="@+id/view_empty5"/>
 
             <EditText
                 android:id="@+id/activity_join_step3_et_code2"
