--- a/app/src/main/res/layout/item_main_hot_theme.xml
+++ b/app/src/main/res/layout/item_main_hot_theme.xml
@@ -87,12 +87,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:src="@drawable/main_ic_bookmark_1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView15"
-        app:layout_constraintEnd_toStartOf="@+id/textView15"
-        app:layout_constraintTop_toTopOf="@+id/textView15" />
+        app:layout_constraintBottom_toBottomOf="@+id/themeSaves"
+        app:layout_constraintEnd_toStartOf="@+id/themeSaves"
+        app:layout_constraintTop_toTopOf="@+id/themeSaves" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/themeSaves"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="13dp"
