--- a/app/src/main/res/layout/onboarding_step1.xml
+++ b/app/src/main/res/layout/onboarding_step1.xml
@@ -109,9 +109,10 @@
         android:layout_height="wrap_content"
         android:src="@drawable/onboarding_1_img_book"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="250dp"/>
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="360dp"/>
 
     <ImageView
         android:id="@+id/onboarding_step1_img_mongle"
@@ -120,8 +121,8 @@
         android:src="@drawable/onboarding_1_img_mongle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="340dp"/>
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="440dp"/>
 
 
     <TextView
@@ -134,7 +135,8 @@
         android:textSize="17sp"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
-        android:padding="18dp"/>
+        android:padding="18dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/onboarding_step1_next"
@@ -147,7 +149,8 @@
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:paddingHorizontal="51dp"
-        android:paddingVertical="18dp"/>
+        android:paddingVertical="18dp"
+        android:visibility="gone"/>
 
 
 
