--- a/app/src/main/res/layout/onboarding_step2.xml
+++ b/app/src/main/res/layout/onboarding_step2.xml
@@ -90,7 +90,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="280dp"/>
+        android:layout_marginTop="280dp"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/onboarding_2_img_mongle"
@@ -112,7 +113,8 @@
         android:textSize="17sp"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
-        android:padding="18dp"/>
+        android:padding="18dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/onboarding_step2_next"
@@ -125,7 +127,8 @@
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:paddingHorizontal="51dp"
-        android:paddingVertical="18dp"/>
+        android:paddingVertical="18dp"
+        android:visibility="gone"/>
 
 
 
